Update README.md and package.json files.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "power-redis",
-	"version": "2.0.1",
-	"description": "Lightweight abstraction over a Redis client for predictable Redis operations: clean keys, safe serialization, efficient bulk operations, and convenient list handling. Build your own domain logic on top (e.g., queues, visibility, retries in PowerQueue) to achieve a stable and extensible architecture.",
+	"version": "2.0.2",
+	"description": "Type-safe Redis wrapper for Node.js providing predictable key schema, safe JSON serialization, atomic list ops, and chunked SCAN/MGET utilities.",
 	"author": "ihor-bielchenko",
 	"license": "MIT",
 	"repository": {
@@ -33,6 +33,57 @@
 	"engines": {
 		"node": ">=14"
 	},
+	"keywords": [
+		"redis",
+		"redis-client",
+		"redis-wrapper",
+		"redis-abstraction",
+		"redis-utility",
+		"redis-helper",
+		"redis-queue",
+		"redis-list",
+		"redis-bulk",
+		"redis-scan",
+		"redis-mget",
+		"redis-ttl",
+		"redis-expire",
+		"redis-delete",
+		"redis-keys",
+		"redis-pattern",
+		"redis-pipeline",
+		"redis-multi",
+		"redis-atomic",
+		"json-serialization",
+		"safe-serialization",
+		"key-schema",
+		"key-builder",
+		"pattern-validation",
+		"key-validation",
+		"list-iterator",
+		"lpop-count",
+		"mget-chunked",
+		"nodejs",
+		"node",
+		"typescript",
+		"ts",
+		"esm",
+		"cjs",
+		"async",
+		"await",
+		"queue",
+		"cache",
+		"key-value",
+		"data-store",
+		"lightweight",
+		"abstraction-layer",
+		"typed-client",
+		"high-performance",
+		"atomic-operations",
+		"transactional",
+		"chunked-operations",
+		"safe-redis",
+		"power-redis"
+	],
 	"devDependencies": {
 		"@types/node": "^24.8.1",
 		"tsup": "^8.5.0",
